# ASI

./: .gitignore  Dockerfile  README.md  environment.yml  load_data_to_db.py  pyproject.toml  pyvenv.cfg  requirements.txt  run_api.py  run_kedro.sh  run_kedro_bash.sh  session_store.db  stats.json  test_get_best_model.py  upload_test.py
conf/: README.md
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_data_science.yml
conf/base/parameters/: parameters_data_science.yml  parameters_reporting.yml
notebooks/: 1_process_aoi_stats.ipynb  1_process_event_stats.ipynb  2_train.ipynb  3_test.ipynb
output/: X_test.parquet  aoi_stats.parquet  event_stats.parquet
source/notebooks/: 1_process_aoi_stats.ipynb  1_process_event_stats.ipynb  2_train.ipynb  3_test.ipynb  train_model_deprecated.ipynb
source/python/: 1_process_aoi_stats.py  1_process_event_stats.py  2_train.py
src/ASI/: __main__.py  hooks.py
src/ASI/datasets/: auto_gluon_dataset.py
src/ASI/pipelines/data_fetching/: nodes.py  pipeline.py
src/ASI/pipelines/data_processing/: nodes.py  pipeline.py
src/ASI/pipelines/data_science/: nodes.py  pipeline.py
src/ASI/pipelines/reporting/: nodes.py  pipeline.py
