[tool.poetry]
name = "oczy-model"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
pycaret = "^3.3.0"
jupyter = "^1.0.0"
kaleido = "0.2.1"
pyarrow = "^15.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
